--- a/RuleSet/游戏加速.yaml
+++ b/RuleSet/游戏加速.yaml
@@ -7,3 +7,4 @@ payload:
   - DOMAIN-SUFFIX,appsflyer.com
   - DOMAIN-SUFFIX,backtrace.io
   - DOMAIN-SUFFIX,skugry.dev
+  - DOMAIN-SUFFIX,measurement.com
