--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1,35 +1,26 @@
 mixed-port: 7890
-unified-delay: false
-geodata-mode: true
-tcp-concurrent: true
-find-process-mode: strict
-global-client-fingerprint: chrome
-
 allow-lan: true
-mode: rule
-log-level: info
+external-controller: '127.0.0.1:9090'
 ipv6: true
+tcp-concurrent: true
+unified-delay: true
+global-client-fingerprint: chrome
+keep-alive-interval: 15
+geodata-mode: true
+log-level: info
 
-external-controller: 127.0.0.1:9090
-#external-ui: ui
-secret: ""
-
-geox-url:
-  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
-  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
-  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
-geo-auto-update: true
-geo-update-interval: 24
-
-profile:
-  store-selected: true
-  store-fake-ip: true
-
-sniffer:
+dns:
     enable: true
-    sniff: { TLS: { ports: [443, 8443] }, HTTP: { ports: [80, 8080-8880], override-destination: true } }
-    skip-domain: ['Mijia Cloud', dlg.io.mi.com, +.apple.com]
-    force-domain: [google.com]
+    listen: '0.0.0.0:1053'
+    use-hosts: true
+    ipv6: true
+    enhanced-mode: fake-ip
+    fake-ip-range: 28.0.0.1/8
+    fake-ip-filter: ['*', +.lan, +.local]
+    default-nameserver: [223.5.5.5, 119.29.29.29]
+    nameserver: [[119.29.29.29, 8.8.8.8, 1.1.1.1]
+    proxy-server-nameserver: ['https://223.6.6.6/dns-query']
+    nameserver-policy: { 'geosite:cn,private': ['quic://223.5.5.5:853', 'https://1.12.12.12/dns-query'] }
 
 tun:
   enable: true
@@ -38,27 +29,24 @@ tun:
     - 'any:53'
   auto-route: true
   auto-detect-interface: true
+    
+geox-url:
+  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
+  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
+  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+geo-auto-update: true
+geo-update-interval: 24
 
-dns:
-  enable: true
-  listen: 0.0.0.0:1053
-  ipv6: true
-  enhanced-mode: fake-ip
-  fake-ip-range: 28.0.0.1/8
-  fake-ip-filter:
-  - '*'
-  - '+.lan'
-  default-nameserver:
-  - 223.5.5.5
-  nameserver:
-  - 'tls://8.8.4.4#dns'
-  - 'tls://1.0.0.1#dns'
-  proxy-server-nameserver:
-  - https://doh.pub/dns-query
-  nameserver-policy:
-    "geosite:cn,private":
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
+profile:
+    store-selected: true
+    store-fake-ip: true
+    
+sniffer:
+    enable: true
+    sniff: { TLS: { ports: [443, 8443] }, HTTP: { ports: [80, 8080-8880], override-destination: true } }
+    skip-domain: ['Mijia Cloud', dlg.io.mi.com, +.apple.com]
+    force-domain: [google.com]
+
 hosts:
     time.android.com: 203.107.6.88
     time.facebook.com: 203.107.6.88
