--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -3,7 +3,7 @@ allow-lan: true
 external-controller: '127.0.0.1:9090'
 ipv6: false
 tcp-concurrent: true
-unified-delay: true
+unified-delay: false
 global-client-fingerprint: chrome
 keep-alive-interval: 15
 geodata-mode: true
