--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -3,12 +3,10 @@ allow-lan: true
 external-controller: '127.0.0.1:9090'
 ipv6: false
 tcp-concurrent: true
-unified-delay: false
+unified-delay: true
 global-client-fingerprint: chrome
 keep-alive-interval: 15
 geodata-mode: true
-log-level: info
-
 dns:
     enable: true
     listen: '0.0.0.0:1053'
@@ -21,24 +19,20 @@ dns:
     nameserver: ['tls://8.8.4.4#🗡️ DNS', 'tls://1.0.0.1#🗡️ DNS']
     proxy-server-nameserver: ['https://223.6.6.6/dns-query']
     nameserver-policy: { 'geosite:cn,private': ['quic://223.5.5.5:853', 'https://1.12.12.12/dns-query'] }
-    
 geox-url:
-  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
-  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
-  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+    geoip: 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat'
+    geosite: 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
 geo-auto-update: true
 geo-update-interval: 24
-
+log-level: info
 profile:
     store-selected: true
     store-fake-ip: true
-
 sniffer:
     enable: true
     sniff: { TLS: { ports: [443, 8443] }, HTTP: { ports: [80, 8080-8880], override-destination: true } }
     skip-domain: ['Mijia Cloud', dlg.io.mi.com, +.apple.com]
     force-domain: [google.com]
-
 hosts:
     time.android.com: 203.107.6.88
     time.facebook.com: 203.107.6.88
