--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1,42 +1,67 @@
-mixed-port: 7890
-allow-lan: true
-external-controller: '127.0.0.1:9090'
-ipv6: false
+unified-delay: false
 tcp-concurrent: true
-unified-delay: true
+find-process-mode: strict
 global-client-fingerprint: chrome
-keep-alive-interval: 15
-geodata-mode: true
+
+tun:
+  enable: true
+  stack: mixed
+  dns-hijack:
+    - "any:53"
+    - "tcp://any:53"
+  auto-route: true
+  auto-detect-interface: true
+
 dns:
-    enable: true
-    listen: '0.0.0.0:1053'
-    use-hosts: true
-    ipv6: false
-    enhanced-mode: fake-ip
-    fake-ip-range: 28.0.0.1/8
-    fake-ip-filter: ['*', +.lan, +.local]
-    default-nameserver: [223.5.5.5]
-    nameserver: ['tls://8.8.4.4#🗡️ DNS', 'tls://1.0.0.1#🗡️ DNS']
-    proxy-server-nameserver: ['https://223.6.6.6/dns-query']
-    nameserver-policy: { 'geosite:cn,private': ['quic://223.5.5.5:853', 'https://1.12.12.12/dns-query'] }
-geox-url:
-    geoip: 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat'
-    geosite: 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
-geo-auto-update: true
-geo-update-interval: 24
-log-level: info
-profile:
-    store-selected: true
-    store-fake-ip: true
+  enable: true
+  listen: :1053
+  ipv6: true
+  enhanced-mode: fake-ip
+  fake-ip-range: 28.0.0.1/8
+  fake-ip-filter:
+    - "*"
+    - "+.lan"
+    - "+.local"
+  default-nameserver:
+    - tls://223.5.5.5
+    - tls://223.6.6.6
+    - tls://119.29.29.29
+  nameserver:
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
+  proxy-server-nameserver:
+    - https://doh.pub/dns-query
+  nameserver-policy:
+    "rule-set:cn_domain,private":
+      - https://doh.pub/dns-query
+      - https://dns.alidns.com/dns-query
+    "rule-set:geolocation-!cn":
+      - https://dns.cloudflare.com/dns-query
+      - https://dns.google/dns-query
+
 sniffer:
-    enable: true
-    sniff: { TLS: { ports: [443, 8443] }, HTTP: { ports: [80, 8080-8880], override-destination: true } }
-    skip-domain: ['Mijia Cloud', dlg.io.mi.com, +.apple.com]
-    force-domain: [google.com]
-hosts:
-    time.android.com: 203.107.6.88
-    time.facebook.com: 203.107.6.88
-    localhost: 127.0.0.1
+  enable: true
+  sniff:
+    HTTP:
+      ports: [80, 8080-8880]
+      override-destination: true
+    TLS:
+      ports: [443, 8443]
+    QUIC:
+      ports: [443, 8443]
+  skip-domain:
+    - "Mijia Cloud"
+
+geodata-mode: true
+geox-url:
+  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip-lite.dat"
+  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
+  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country-lite.mmdb"
+  geo-auto-update: true
+  geo-update-interval: 24
+  
+clash-for-android:
+  append-system-dns: false
     
 # 机场
 proxy-providers:
@@ -1158,6 +1183,13 @@ rule-providers:
     path: ./ruleset/Bing.yaml
     interval: 86400
 
+  Copilot:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.yaml"
+    path: ./ruleset/Copilot.yaml
+    interval: 86400
+
   OPENAI:
     type: http
     behavior: classical
@@ -1390,6 +1422,7 @@ rules:
   - RULE-SET,Download,🎯 全球直连
   - RULE-SET,Media_cn,🎯 全球直连
   - RULE-SET,Bing,⚛️ AI
+  - RULE-SET,Bing,⚛️ Copilot
   - RULE-SET,OPENAI,⚛️ AI
   - RULE-SET,Claude,⚛️ AI
   - RULE-SET,Notion,⚛️ AI
