--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -2,26 +2,18 @@ port: 7890
 socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
-allow-lan: false
+allow-lan: true
 mode: Rule
 log-level: info
 external-controller: ':9990'
-tcp-concurrent: true
 
 clash-for-android:
   append-system-dns: false
 
-geox-url:
-  geoip: "https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
-  geosite: "https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
-  mmdb: "https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.metadb"
-geo-auto-update: ture
-geo-update-interval: 24
-  
 hosts:
   mtalk.google.com: 108.177.125.188
   raw.githubusercontent.com: 151.101.76.133
-
+  
 dns:
   enabled: true
   ipv6: true
