--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -301,6 +301,7 @@ proxy-groups:
       - 🇸🇬 狮城高级
       - 🇺🇲 美国高级
       - 🚀 高级节点
+      - 🚀 低倍节点
       - 🚀 手动切换
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
