--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -21,7 +21,6 @@ external-controller: '127.0.0.1:9090'
 
 clash-for-android:
     append-system-dns: false
-
     
 # 机场
 proxy-providers:
@@ -69,17 +68,6 @@ proxy-providers:
       # lazy: true
       url: http://www.gstatic.com/generate_204
 
-  ✈️ ACA:
-    type: http
-    url: "*****"
-    interval: 86400
-    path: ./ACA.yaml
-    health-check:
-      enable: true
-      interval: 600
-      # lazy: true
-      url: http://www.gstatic.com/generate_204
-
 # 规则分组
 # 引用proxy-providers用use，其他proxies
 proxy-groups:
@@ -112,14 +100,13 @@ proxy-groups:
       - ✈️ MESL
       - ✈️ CTC
       - ✈️ ETON
-      - ✈️ ACA
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 
   - name: "⚛️ AI"
     type: select
     proxies:
-      - 🇺🇲 美国高级
       - 🇸🇬 狮城高级
+      - 🇺🇲 美国高级
       - 🚀 高级节点
       - 🚀 手动切换
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bot.png
@@ -249,7 +236,6 @@ proxy-groups:
     type: select
     proxies:
       - 🌏 守候线路
-      - 🌏 ACA线路
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 
   - name: "🎮 Bahamut"
@@ -300,17 +286,10 @@ proxy-groups:
     proxies:
       - 🇸🇬 狮城高级
       - 🇺🇲 美国高级
-      - 🚀 高级节点
       - 🚀 低倍节点
+      - 🚀 高级节点
       - 🚀 手动切换
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
-
-  - name: "📵 广告拦截"
-    type: select
-    proxies:
-      - REJECT
-      - DIRECT
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 
   - name: "🍃 应用净化"
     type: select
@@ -478,7 +457,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(HK).*((?i)(udpn)|(iepl))"
+    filter: "(HK).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -492,7 +471,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(TW).*((?i)(udpn)|(iepl))"
+    filter: "(TW).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -506,7 +485,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(SG).*((?i)(udpn)|(iepl))"
+    filter: "(SG).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -520,7 +499,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(JP).*((?i)(udpn)|(iepl))"
+    filter: "(JP).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -534,7 +513,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(US).*((?i)(udpn)|(iepl))"
+    filter: "(US).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -548,7 +527,7 @@ proxy-groups:
     use:
       - ✈️ MESL
       - ✈️ ETON
-    filter: "(KR).*((?i)(udpn)|(iepl))"
+    filter: "(KR).*((?i)((game)|udpn)|(iepl))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -564,7 +543,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(HK).*(0.[1-9])"
+    filter: "(HK).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -577,7 +556,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(HK).*(0.[1-9])"
+    filter: "(HK).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -590,7 +569,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(HK).*(0.[1-9])"
+    filter: "(HK).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -604,7 +583,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(TW).*(0.[1-9])"
+    filter: "(TW).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -617,7 +596,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(TW).*(0.[1-9])"
+    filter: "(TW).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -630,7 +609,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(TW).*(0.[1-9])"
+    filter: "(TW).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -644,7 +623,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(SG).*(0.[1-9])"
+    filter: "(SG).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -657,7 +636,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(SG).*(0.[1-9])"
+    filter: "(SG).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -670,7 +649,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(SG).*(0.[1-9])"
+    filter: "(SG).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -684,7 +663,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(JP).*(0.[1-9])"
+    filter: "(JP).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -697,7 +676,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(JP).*(0.[1-9])"
+    filter: "(JP).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -710,7 +689,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(JP).*(0.[1-9])"
+    filter: "(JP).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -724,7 +703,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(US).*(0.[1-9])"
+    filter: "(US).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -737,7 +716,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(US).*(0.[1-9])"
+    filter: "(US).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -750,7 +729,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(US).*(0.[1-9])"
+    filter: "(US).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -764,7 +743,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(Korea).*(0.[1-9])"
+    filter: "(Korea).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -777,7 +756,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(KR).*(0.[1-9])"
+    filter: "(KR).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -790,7 +769,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(KR).*(0.[1-9])"
+    filter: "(KR).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -804,7 +783,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(HK).*((?i)(IPLC))"
+    filter: "(HK)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -817,7 +796,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(HK)(?!.*(0.[1-9]))"
+    filter: "(HK)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -830,7 +809,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(HK)(?!.*(0.[1-9]))"
+    filter: "(HK)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -844,7 +823,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(TW).*((?i)(IPLC))"
+    filter: "(TW)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -857,7 +836,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(TW)(?!.*(0.[1-9]))"
+    filter: "(TW)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -870,7 +849,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(TW)(?!.*(0.[1-9]))"
+    filter: "(TW)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -884,7 +863,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(SG).*((?i)(IPLC))"
+    filter: "(SG)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -897,7 +876,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(SG)(?!.*(0.[1-9]))"
+    filter: "(SG)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -910,7 +889,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(SG)(?!.*(0.[1-9]))"
+    filter: "(SG)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -924,7 +903,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(JP).*((?i)(IPLC))"
+    filter: "(JP)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -937,7 +916,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(JP)(?!.*(0.[1-9]))"
+    filter: "(JP)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -950,7 +929,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(JP)(?!.*(0.[1-9]))"
+    filter: "(JP)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -964,7 +943,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(US).*((?i)(IPLC))"
+    filter: "(US)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -977,7 +956,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(US)(?!.*(0.[1-9]))"
+    filter: "(US)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -990,7 +969,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(US)(?!.*(0.[1-9]))"
+    filter: "(US)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -1004,7 +983,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(Korea).*((?i)(IPLC))"
+    filter: "(Korea)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -1017,7 +996,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ MESL
-    filter: "(KR)(?!.*(0.[1-9]))"
+    filter: "(KR)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -1030,7 +1009,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ CTC
-    filter: "(KR)(?!.*(0.[1-9]))"
+    filter: "(KR)(?!.*(0([.][0-9]+)))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -1043,20 +1022,7 @@ proxy-groups:
     type: url-test
     use:
       - ✈️ 守候网络
-    filter: "(?i)(hk|tw|sg|jp).*(0.[1-9])"
-    health-check:
-    enable: true
-    url: https://www.gstatic.com/generate_204
-    interval: 60
-    tolerance: 50
-    lazy: true
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Filter.png
-
-  - name: "🌏 ACA线路"
-    type: url-test
-    use:
-      - ✈️ ACA
-    filter: "(?i)(emby|lite)"
+    filter: "(HK|TW|SG|JP).*(0([.][0-9]+))"
     health-check:
     enable: true
     url: https://www.gstatic.com/generate_204
@@ -1089,19 +1055,25 @@ rule-providers:
     path: ./ruleset/Game_acceleration.yaml
     interval: 86400
 
-# 常用软件广告
-  AdvertisingLite:
-    type: http
-    behavior: classical
-    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite_Classical.yaml"
-    path: ./ruleset/AdvertisingLite.yaml
-    interval: 86400
-
 # 反劫持
   Hijacking:
     type: http
     behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml"
+    path: ./ruleset/Hijacking.yaml
+    interval: 86400
+  
+  Adobe:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Adobe/Adobe_No_Resolve.yaml"
+    path: ./ruleset/Hijacking.yaml
+    interval: 86400
+    
+  AdobeActivation:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdobeActivation/AdobeActivation_No_Resolve.yaml"
     path: ./ruleset/Hijacking.yaml
     interval: 86400
 
@@ -1377,7 +1349,8 @@ rules:
   - RULE-SET,Lan,🎯 全球直连
   - RULE-SET,360,🎯 全球直连
   - RULE-SET,Game_acceleration,🎮 游戏加速
-  - RULE-SET,AdvertisingLite,📵 广告拦截
+  - RULE-SET,Adobe,🍃 应用净化
+  - RULE-SET,AdobeActivation,🍃 应用净化
   - RULE-SET,Hijacking,🍃 应用净化
   - RULE-SET,Privacy,🍃 应用净化
   - RULE-SET,BlockHttpDNS,🍃 应用净化
