--- a/RuleSet/Emby.yaml
+++ b/RuleSet/Emby.yaml
@@ -6,3 +6,5 @@ payload:
   - DOMAIN-SUFFIX,cn2gias.uk
   - DOMAIN-SUFFIX,charontv.com
   - DOMAIN-SUFFIX,i109.com
+  - DOMAIN-SUFFIX,embyplus.org
+  - DOMAIN-SUFFIX,  bili.bili.rip
