--- a/RuleSet/Emby.yaml
+++ b/RuleSet/Emby.yaml
@@ -5,6 +5,7 @@ payload:
   - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN-SUFFIX,cn2gias.uk
   - DOMAIN-SUFFIX,charontv.com
+  - DOMAIN-SUFFIX,89.58.18.111
   - DOMAIN-SUFFIX,i109.com
   - DOMAIN-SUFFIX,embyplus.org
   - DOMAIN-SUFFIX,bili.bili.rip
