--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -235,6 +235,7 @@ proxy-groups:
     type: select
     proxies:
       - 🌏 守候线路
+      - 🌏 CTC线路
     icon: https://raw.githubusercontent.com/Yzaams/clash/main/Icon/Emby.png
 
   - name: "🎮 Bahamut"
@@ -377,7 +378,7 @@ proxy-groups:
     lazy: true
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 
-#  低倍高流量分组
+#  低倍率高流量分组
   - name: "🇭🇰 守候&CTC低倍"
     type: url-test
     proxies:
@@ -460,8 +461,7 @@ proxy-groups:
   - name: "🇭🇰 香港高级"
     type: fallback
     proxies:
-      - 🇭🇰 MESL高级
-      - 🇭🇰 CTC高级
+      - 🇭🇰 MESL&CTC高级
       - 🇭🇰 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
@@ -471,8 +471,7 @@ proxy-groups:
   - name: "🇹🇼 台湾高级"
     type: fallback
     proxies:
-      - 🇹🇼 MESL高级
-      - 🇹🇼 CTC高级
+      - 🇹🇼 MESL&CTC高级
       - 🇹🇼 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
@@ -482,8 +481,7 @@ proxy-groups:
   - name: "🇸🇬 狮城高级"
     type: fallback
     proxies:
-      - 🇸🇬 MESL高级
-      - 🇸🇬 CTC高级
+      - 🇸🇬 MESL&CTC高级
       - 🇸🇬 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
@@ -493,8 +491,7 @@ proxy-groups:
   - name: "🇯🇵 日本高级"
     type: fallback
     proxies:
-      - 🇯🇵 MESL高级
-      - 🇯🇵 CTC高级
+      - 🇯🇵 MESL&CTC高级
       - 🇯🇵 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
@@ -504,8 +501,7 @@ proxy-groups:
   - name: "🇺🇲 美国高级"
     type: fallback
     proxies:
-      - 🇺🇲 MESL高级
-      - 🇺🇲 CTC高级
+      - 🇺🇲 MESL&CTC高级
       - 🇺🇲 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
@@ -515,11 +511,89 @@ proxy-groups:
   - name: "🇰🇷 韩国高级"
     type: fallback
     proxies:
-      - 🇰🇷 MESL高级
-      - 🇰🇷 CTC高级
+      - 🇰🇷 MESL&CTC高级
       - 🇰🇷 守候高级
     url: 'https://www.gstatic.com/generate_204'
     interval: 60
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
+
+#  高倍率低流量分组
+  - name: "🇭🇰 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇭🇰 MESL高级
+      - 🇭🇰 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+
+  - name: "🇹🇼 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇹🇼 MESL高级
+      - 🇹🇼 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+
+  - name: "🇸🇬 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇸🇬 MESL高级
+      - 🇸🇬 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+
+  - name: "🇯🇵 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇯🇵 MESL高级
+      - 🇯🇵 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+
+  - name: "🇺🇲 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇺🇲 MESL高级
+      - 🇺🇲 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+
+  - name: "🇰🇷 MESL&CTC高级"
+    type: url-test
+    proxies:
+      - 🇰🇷 MESL高级
+      - 🇰🇷 CTC高级
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
     lazy: true
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 
@@ -1102,6 +1176,19 @@ proxy-groups:
     tolerance: 100
     lazy: true
     icon: https://raw.githubusercontent.com/Yzaams/clash/main/Icon/xttlove.png
+
+  - name: "🌏 CTC线路"
+    type: url-test
+    use:
+      - ✈️ CTC
+    filter: "(HK|TW|SG|JP).*(0([.][0-9]+))"
+    health-check:
+    enable: true
+    url: https://www.gstatic.com/generate_204
+    interval: 60
+    tolerance: 100
+    lazy: true
+    icon: https://raw.githubusercontent.com/Yzaams/clash/main/Icon/CTC.png
     
 rule-providers:
 # 本地
