--- a/多机场分流双图标.yaml
+++ b/多机场分流双图标.yaml
@@ -1298,6 +1298,13 @@ rule-providers:
     path: ./ruleset/GoogleFCM.yaml
     interval: 86400
 
+  BardAI:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BardAI/BardAI.list"
+    path: ./ruleset/BardAI.yaml
+    interval: 86400
+
   OneDrive:
     type: http
     behavior: classical
@@ -1457,6 +1464,7 @@ rules:
   - RULE-SET,GoogleCN,🌐 Google
   - RULE-SET,GoogleEarth,🌐 Google
   - RULE-SET,GoogleFCM,🌐 Google
+  - RULE-SET,BardAI,🌐 Google
   - RULE-SET,OneDrive,☁️ Onedrive
   - RULE-SET,Microsoft,Ⓜ️ Microsoft
   - RULE-SET,Apple,🍎 Apple
